PocketMovie working version - Added Listener to RV and basic detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".HttpRequestService"
             android:exported="false" />
 
+        <activity android:name=".DetailActivity"></activity>
     </application>
 
 </manifest>
