PocketMovie working version -sqlite partially ok, Pocket Fragment filled with RV

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <service
-            android:name=".HttpRequestService"
+            android:name=".model.HttpRequestService"
             android:exported="false" />
 
         <activity android:name=".DetailActivity">
