--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,15 @@
 
     <application
         android:allowBackup="true"
+        android:background="@color/colorMain"
         android:icon="@drawable/cameraicon2"
         android:label="@string/app_name"
-
-        android:textColor="@color/colorText"
-        android:background="@color/colorMain"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:textColor="@color/colorText"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +27,24 @@
             android:name=".model.HttpRequestService"
             android:exported="false" />
 
-        <activity android:name=".DetailActivity"
+        <activity
+            android:name=".DetailActivity"
             android:theme="@style/AppTheme">
-
         </activity>
+
+        <activity android:name=".SearchActivity"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                android:value=".SearchableActivity"/>
+        </activity>
+
+
+
+
     </application>
 
 </manifest>
